@@ -10,8 +10,9 @@ Cobbler CHANGELOG
 - added authn_ldap and stub for authz_configfile
 - authz_configfile allows filtering ldap/other users by config file
 - WebUI now has checkbox on distro/profile for deleting child objects
-- cli has different semantics between "add" and "edit" now
+- cli has different semantics between "add" and "edit" now for safety reasons
 - cobbler wants to keep IPs/MACs unique now in configuration (can be disabled)
+- added --clobber option to allow add to overwrite existing objects (for scripts)
 
 - ??? - 0.8.3
 - fix WebUI documentation URL
